<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/sync"
          android:title="Sync"
          app:showAsAction="ifRoom"
          android:icon="@drawable/ic_sync"/>
<item android:id="@+id/switchMap"
      android:title="SwitchMap"
      app:showAsAction="ifRoom"/>

</menu>