...
                                                   android:layout_height="match_parent"
                                                   tools:context=".fragments.MapFragment">
    <com.mapbox.mapboxsdk.maps.MapView android:id="@+id/mapView"
                                       android:layout_width="match_parent"
                                       android:layout_height="match_parent"/>

    <androidx.appcompat.widget.Toolbar android:id="@+id/mapToolbar"
                                       android:layout_width="match_parent"
                                       android:layout_height="?attr/actionBarSize"
                                       android:layout_margin="10dp"
                                       android:elevation="4dp"
                                       android:clipToPadding="false"
                                       android:background="@drawable/map_toolbar_background"
                                       app:layout_constraintTop_toTopOf="parent"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton android:id="@+id/locate_device_btn"
                                                                           android:layout_width="wrap_content"
                                                                           android:layout_height="wrap_content"
                                                                           android:layout_marginBottom="8dp"
                                                                           app:layout_constraintBottom_toBottomOf="parent"
                                                                           app:layout_constraintEnd_toEndOf="parent"
                                                                           android:layout_marginEnd="8dp"
...
